# lib

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: backend-test.yml  build-portal-app-lib.yml
app/: Cargo.toml
app/src/: db.rs  lib.rs  nwc.rs  runtime.rs  wallet.rs
assets/: fiatUnits.json
backend/: .envrc  .gitignore  Cargo.toml  default.nix  flake.nix  module.nix  package-lock.json  package.json  tsconfig.json
backend/public/: dashboard.html  index.html
backend/src/: index.ts  main.rs  session.ts
backend/templates/: dashboard.html.tera  login.html.tera
business_app/: Cargo.toml  README.MD
business_app/cli/: Cargo.toml
business_app/cli/src/: main.rs
business_app/src/: business.rs  db.rs  lib.rs  logger.rs  nwc.rs  runtime.rs  wallet.rs
cli/: Cargo.toml  run
cli/src/: lib.rs  main.rs
rates/: Cargo.toml  README.md
rates/src/: lib.rs
react-native/: .gitignore  LICENSE  PortalAppLib.podspec  README.md  flake.nix  missing-hashes.json  package-lock.json  package.json  patch-uniffi-bindgen.js  tsconfig.json  ubrn-cargo-lock.patch  ubrn.config.yaml
react-native/example/: app.json  package.json
react-native/example/android/: settings.gradle
react-native/example/android/app/: build.gradle
react-native/example/android/app/src/main/java/portalapplib/example/: MainActivity.kt  MainApplication.kt
react-native/example/android/app/src/main/res/values/: strings.xml
react-native/example/ios/: Podfile
react-native/example/ios/PortalAppLibExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
react-native/example/ios/PortalAppLibExample.xcodeproj/: project.pbxproj
react-native/example/ios/PortalAppLibExample.xcodeproj/xcshareddata/xcschemes/: PortalAppLibExample.xcscheme
react-native/example/src/: App.tsx
react-native/static/: Info.plist
rest/: Cargo.toml  README.md  asyncapi.yaml  default.nix  env.example  module.nix  run
rest/clients/jvm/: README.MD  build.gradle.kts  settings.gradle.kts
rest/clients/jvm/gradle/wrapper/: gradle-wrapper.properties
rest/clients/jvm/src/main/kotlin/: Example.kt  Main.kt  Portal.kt
rest/clients/jvm/src/main/kotlin/command/: CommandWithId.kt  CommandWithIdSerializer.kt
rest/clients/jvm/src/main/kotlin/exception/: PortalException.kt
rest/clients/jvm/src/main/kotlin/json/: JsonUtils.kt
rest/clients/jvm/src/main/kotlin/model/: Profile.kt
rest/clients/jvm/src/test/kotlin/: Example.kt
rest/clients/ts/: .gitignore  README.md  default.nix  example.ts  package-lock.json  package.json  tsconfig.json
rest/clients/ts/src/: client.ts  index.ts  types.ts
rest/src/: command.rs  main.rs  response.rs  ws.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
src/: cashu.rs  close_subscription.rs  invoice.rs  lib.rs  model.rs  profile.rs  utils.rs
src/app/: auth.rs  handlers.rs  mod.rs  payments.rs
src/protocol/: auth_init.rs  calendar.rs  identity.rs  jwt.rs  key_handshake.rs  mod.rs  model.rs  rates.rs  subkey.rs
src/router/: actor.rs  adapters.rs  app.rs  channel.rs  connector.rs  ids.rs  mod.rs  sdk.rs
src/router/adapters/: mod.rs  multi_key_listener.rs  multi_key_sender.rs  one_shot.rs
src/sdk/: auth.rs  handlers.rs  mod.rs  payments.rs
src/test_framework/: logger.rs  mod.rs
src/test_framework/tests/: auth_scenario.rs
src/tests/: basic.rs
tools/asyncapi-gen/: package-lock.json  package.json
