[workspace]
members = [ "app" , "backend", "cli", "sdk"]

[package]
name = "portal"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr = { version = "0.41.0", features = ["nip44", "nip05"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
nostr-relay-pool = "0.41.0"
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"
base64 = "0.21"
tokio = { version = "1.36", features = ["full"] }
urlencoding = "2.1.3"
log = "0.4.27"
env_logger = "0.11.8"
tokio-stream = "0.1.17"
futures = "0.3.31"
uniffi = { version = "0.29.1", optional = true }
anyhow = { version = "1.0.98", optional = true }
chrono = "0.4.40"
chrono-tz = { version = "0.10.3", features = ["serde"] }

[features]
default = ["bindings"]
bindings = ["uniffi", "anyhow"]

[patch.crates-io]
nostr = { path = "../git/nostr/crates/nostr" }