[package]
name = "app"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
uniffi = "0.29.1"
portal = { path = "../", features = ["bindings"] }
thiserror = "2.0.12"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
android_logger = "0.15.0"
log = "0.4.27"
async = "0.0.0"
async-trait = "0.1.88"
bip39 = { version = "2.1.0", features = ["rand"] }
bitcoin = "0.32.5"
nwc = "0.41.0"
nostr = { version = "0.41" }

nostrstore = "0.2.3"
nostr-relay-pool = "0.41.0"
# nostrstore-derive = "0.1.0"
