[package]
name = "app"
version = "0.4.2"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
uniffi = { workspace = true }
portal = { path = "../", features = ["bindings"] }
rates = { path = "../rates", features = ["bindings"]}
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
android_logger = { workspace = true }
log = { workspace = true }
async = { workspace = true }
async-trait = { workspace = true }
bip39 = { workspace = true }
bitcoin = { workspace = true }
nwc = { workspace = true }
nostr = { workspace = true }
futures = { workspace = true }

nostrstore = { workspace = true }
nostr-relay-pool = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-utility = { workspace = true }
# nostrstore-derive = "0.1.0"
lightning-invoice = "0.33.2"

chrono = { workspace = true }

cdk = { workspace = true, features = ["wallet"] }
cdk-common = { workspace = true }

rand = { workspace = true }
