[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
portal = { path = "../", features = [] }
sdk = { path = "../sdk" }
log = "0.4.27"
env_logger = "0.11.8"
nwc = "0.41.0"