[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app", features = [] }
async-trait = "0.1.88"
env_logger = "0.11.8"
log = "0.4.27"
portal = { path = "../", features = ["bindings"] }
tokio = { version = "1.41.1", features = [] }
nwc = "0.42.0"
base64 = "0.22.1"
sdk = { path = "../sdk", features = [] }