[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app", features = [] }
async-trait = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
portal = { path = "../", features = ["bindings"] }
tokio = { workspace = true, features = [] }
nwc = { workspace = true }
base64 = { workspace = true }
sdk = { path = "../sdk", features = [] }