[package]
name = "rates"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full", "test-util"] }
log = "0.4.27"

uniffi = { version = "0.29.1", optional = true }
async-utility = { version = "0.3.1", optional = true }

[features]
bindings = ["uniffi", "async-utility"]