[package]
name = "rates"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }

uniffi = { workspace = true, optional = true }
async-utility = { workspace = true, optional = true }

[features]
bindings = ["uniffi", "async-utility"]