[package]
name = "rest"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../sdk" }
portal = { version = "0.1.0", path = "../" }
nwc = "0.42.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
dotenv = "0.15"
anyhow = "1.0"
futures = "0.3"
base64 = "0.21"

console-subscriber = { version = "0.4.1", optional = true }
dashmap = "6.1.0"

chrono = "0.4.41"

cdk = { git = "https://github.com/PortalTechnologiesInc/cdk", rev = "d3301e78fe2a3138a5aa46ec54cb0b7cf24c8bcb", features = ["wallet"] }
cdk-sqlite = { git = "https://github.com/PortalTechnologiesInc/cdk", rev = "d3301e78fe2a3138a5aa46ec54cb0b7cf24c8bcb" }
rand = "0.8"

[features]
task-tracing = ["console-subscriber"]
