[package]
name = "rest"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../sdk" }
portal = { version = "0.1.0", path = "../" }
nwc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }

console-subscriber = { workspace = true, optional = true }
dashmap = { workspace = true }

chrono = { workspace = true }

cdk = { workspace = true, features = ["wallet"] }
cdk-sqlite = { workspace = true }
rand = { workspace = true }

[features]
task-tracing = ["console-subscriber"]
