[package]
name = "business_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
business_app = { path = "../../business_app", features = [] }
nostr = { version = "0.42.0", features = [] }
portal = { path = "../../", features = ["bindings"] }
log = "0.4.27"
tokio = { version = "1.41.1", features = [] }

async-trait = "0.1.88"
env_logger = "0.11.8"